--- a/src/App.css
+++ b/src/App.css
@@ -9,21 +9,22 @@
 
 .App-header {
   background-color: #222;
-  height: 300px;
+  height: 280px;
   padding: 40px;
   color: white;
 }
 
 .App-title {
   margin-top: 50px;
-  font-size: 2.5em;
+  font-size: 2.0em;
   color: white!important;
 }
 
 .App-intro {
   font-size: large;
 }
-
+ant-card-title{font-size: 20px!important;}
+.ant-card-body{padding: 40px!important;}
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
