--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,7 @@
 .App-intro {
   font-size: large;
 }
+.ant-menu-item{text-align: left!important;}
 ant-card-title{font-size: 20px!important;}
 .ant-card-body{padding: 40px!important;}
 @keyframes App-logo-spin {
