--- a/src/App.css
+++ b/src/App.css
@@ -9,14 +9,14 @@
 
 .App-header {
   background-color: #222;
-  height: 280px;
-  padding: 40px;
+  height: 150px;
+  padding: 20px;
   color: white;
 }
 
 .App-title {
   margin-top: 50px;
-  font-size: 2.0em;
+  font-size: 1.5em;
   color: white!important;
 }
 
@@ -24,7 +24,7 @@
   font-size: large;
 }
 .ant-menu-item{text-align: left!important;}
-ant-card-title{font-size: 20px!important;}
+.ant-card-head-title{font-size: 25px!important;}
 .ant-card-body{padding: 40px!important;}
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
